# embedded-icon

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: doc.yml
embedded_icon/: index.html  macro.include_icon!.html  macro.include_icon.html  sidebar-items.js  struct.Icon.html  trait.EmbeddedIcon.html  trait.NewIcon.html
embedded_icon/icon/: struct.Icon.html  trait.EmbeddedIcon.html  trait.NewIcon.html
embedded_icon/icons/: index.html  sidebar-items.js
embedded_icon/prelude/: index.html  macro.include_icon.html  sidebar-items.js  struct.Icon.html  trait.EmbeddedIcon.html  trait.NewIcon.html
examples/: readme.rs  simple.rs
search.desc/embedded_icon/: embedded_icon-desc-0-.js  embedded_icon-desc-1-.js  embedded_icon-desc-10-.js  embedded_icon-desc-11-.js  embedded_icon-desc-12-.js  embedded_icon-desc-13-.js  embedded_icon-desc-14-.js  embedded_icon-desc-15-.js  embedded_icon-desc-16-.js  embedded_icon-desc-17-.js  embedded_icon-desc-18-.js  embedded_icon-desc-19-.js  embedded_icon-desc-2-.js  embedded_icon-desc-20-.js  embedded_icon-desc-21-.js  embedded_icon-desc-22-.js  embedded_icon-desc-23-.js  embedded_icon-desc-24-.js  embedded_icon-desc-25-.js  embedded_icon-desc-26-.js  embedded_icon-desc-27-.js  embedded_icon-desc-28-.js  embedded_icon-desc-29-.js  embedded_icon-desc-3-.js  embedded_icon-desc-30-.js  embedded_icon-desc-31-.js  embedded_icon-desc-32-.js  embedded_icon-desc-33-.js  embedded_icon-desc-34-.js  embedded_icon-desc-35-.js  (+15 more)
src/: icon.rs  icons.rs  lib.rs
(+88547 files in other folders)
